--- a/eShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<eShop.Database.Entities.Category>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Product Category";
 }
-
-<h1>Index</h1>
+<h1 class="text-center">Product Category</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus"></i> Create New</a>
 </p>
 <table class="table table-bordered table-hover table-striped">
     <thead>
@@ -22,21 +20,26 @@
             <th>
                 Created At
             </th>
-            
+            <th>Update At</th>
+            <th class="text-end">
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>@item.Id</td>
-            <td>@item.Name</td>
-            <td>@item.CreateAt</td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.Id</td>
+                <td>@item.Name</td>
+                <td>@item.CreateAt</td>
+                <td>@item.UpdateAt</td>
+                <td class="text-end">
+                    <a class="btn btn-sm btn-info text-light" asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-eye"></i></a>
+                    <a class="btn btn-sm btn-warning text-light" asp-action="Update" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
+                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
