--- a/eShop/Areas/Admin/Views/Category/Update.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Update.cshtml
@@ -1,27 +1,28 @@
 ﻿@model eShop.Database.Entities.Category
 
 @{
-    ViewData["Title"] = "Create";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Update";
+
 }
 
-<h1 class="text-center">Create</h1>
-
+<h1 class="text-center">Update</h1>
 <hr />
+
 <div class="row">
     <div class="col-md-4 m-auto">
-        <form asp-action="Create" method="post">
+        <form asp-action="Update" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="form-label">Name</label>
+                <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            
             <div class="form-group mt-2">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
         <a asp-action="Index" class="btn btn-sm btn-dark mt-2"> <i class="fas fa-arrow-left"></i> Back to List</a>
     </div>
 </div>
+
+
