--- a/eShop/Areas/Admin/Views/Category/Create.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model eShop.Database.Entities.Category
+﻿@using eShop.Areas.Admin.ViewModels.Category
+@model AddOrUpdateCategoryVM
 
 @{
     ViewData["Title"] = "Create";
@@ -11,13 +12,13 @@
 <div class="row">
     <div class="col-md-4 m-auto">
         <form asp-action="Create" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="form-label">Name</label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                @*<span asp-validation-for="Name" class="text-danger"></span>*@
             </div>
-            
+
             <div class="form-group mt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
