--- a/eShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<eShop.Database.Entities.Category>
+﻿@using eShop.Areas.Admin.ViewModels.Category
+@model IEnumerable<ListItemCategoryVM>
 
 @{
     ViewData["Title"] = "Product Category";
@@ -20,7 +21,6 @@
             <th>
                 Created At
             </th>
-            <th>Update At</th>
             <th class="text-end">
                 Actions
             </th>
@@ -30,16 +30,20 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Id</td>
-                <td>@item.Name</td>
-                <td>@item.CreateAt</td>
-                <td>@item.UpdateAt</td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedAt)
+                </td>
                 <td class="text-end">
-                    <a class="btn btn-sm btn-info text-light" asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-eye"></i></a>
-                    <a class="btn btn-sm btn-warning text-light" asp-action="Update" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
+                    <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
                     <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i></a>
                 </td>
             </tr>
-        }
+}
     </tbody>
 </table>
