--- a/eShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/eShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -41,11 +41,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - eShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
 
     <script src="~/lib/vue/vue.global.min.js"></script>
     <script src="~/lib/axios/axios.min.js"></script>
