--- a/eShop/Areas/Admin/Views/Category/Create.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Create.cshtml
@@ -14,7 +14,7 @@
         <form asp-action="Create" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="form-label">Name</label>
+                <label asp-for="Name" class="form-label"></label>
                 <input asp-for="Name" class="form-control" />
                 @*<span asp-validation-for="Name" class="text-danger"></span>*@
             </div>
