--- a/eShop/Areas/Admin/Views/Category/Update.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Update.cshtml
@@ -1,28 +1,33 @@
-﻿@model eShop.Database.Entities.Category
+﻿@model eShop.Areas.Admin.ViewModels.Category.AddOrUpdateCategoryVM
 
 @{
     ViewData["Title"] = "Update";
-
 }
 
 <h1 class="text-center">Update</h1>
-<hr />
 
 <div class="row">
     <div class="col-md-4 m-auto">
-        <form asp-action="Update" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Update">
+            <div asp-validation-summary="All" class="text-danger"></div>
+
+            <input asp-for="Id" type="hidden" class="form-control" />
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
-        <a asp-action="Index" class="btn btn-sm btn-dark mt-2"> <i class="fas fa-arrow-left"></i> Back to List</a>
     </div>
 </div>
 
+<div class="mt-2">
+    <a asp-action="Index">Back to List</a>
+</div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
