--- a/eShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Index.cshtml
@@ -4,11 +4,8 @@
 @{
     ViewData["Title"] = "Product Category";
 }
-<h1 class="text-center">Product Category</h1>
+<h1 class="text-center">Danh mục sản phẩm</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus"></i> Create New</a>
-</p>
 
 @if (TempData["Err"] != null)
 {
@@ -24,44 +21,119 @@
     </div>
 }
 
-<table class="table table-bordered table-hover table-striped">
-    <thead>
-        <tr>
-            <th>
-                #
-            </th>
-            <th>
-                Name
-            </th>
-            <th>
-                Created At
-            </th>
-            <th class="text-end">
-                Actions
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div id="vueData">
+
+    <button v-on:click="showCreateModel()" class="btn btn-success mb-2"><i class="fas fa-plus"></i> Thêm mới</button> <br />
+
+    <button class="btn btn-info mb-2 text-light" v-on:click="refreshData()"><i class="fas fa-undo"></i> Làm mới dữ liệu</button>
+
+    <table class="table table-bordered table-hover table-striped">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedAt)
-                </td>
-                <td class="text-end">
-                    <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
-                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.Id" onclick="return comfirm('Bạn có chắc xóa không?')"><i class="fas fa-trash"></i></a>
+                <th>
+                    #
+                </th>
+                <th>
+                    Tên danh mục
+                </th>
+                <th>
+                    Tạo lúc
+                </th>
+                <th class="text-center">
+                    Thao tác
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr v-for="item in categories">
+                <td>{{item.id}}</td>
+                <td>{{item.name}}</td>
+                <td>{{new Date(item.createAt).toLocaleString()}}</td>
+                <td class="text-center">
+                    <button class="btn btn-sm btn-warning"><a v-bind:href="`/Admin/Category/Update/` + item.id" class="text-decoration-none text-light"><i class="fas fa-edit"></i></a></button>
+                    <button v-on:click="deleteCategory(item.id)" class="btn btn-sm btn-danger mx-2"><i class="fas fa-trash"></i></button>
                 </td>
             </tr>
-        }
-    </tbody>
-</table>
-<code>
-    @ViewBag.Sql
-</code>
+        </tbody>
+    </table>
+    <partial name="_Create" />
+       <textarea v-model="cateData.name"></textarea>
+    <p>{{cateData.name}}</p>
+</div>
+
+
+@section Scripts{
+    <script>
+
+        let noti = new AWN(); // awesome-notifications
+
+        let modalCreate = new bootstrap.Modal("#modalCreate");
+
+        Vue.createApp({
+            data() {
+                return {
+                    categories: [],
+                    cateData: {
+                        name: 'Nam Le'
+                    }
+                }
+            },
+            methods: {  
+                // hiển thị popup tạo danh mục
+                showCreateModel() {
+                    modalCreate.show();
+                },
+                // xóa danh mục
+                deleteCategory(id) {
+                    console.log(id)
+                    noti.confirm(
+                        "Xác nhận xóa dữ liệu này?",
+                        () => {
+                            noti.async(
+                                // gọi ajax đến action Delete
+                                axios.get("/Admin/Category/Delete/" + id),
+                                // thành công
+                                (res) => {
+                                    var data = res.data;
+                                    if (data.success) {
+                                        noti.success("Xóa danh mục thành công!");
+                                        // load lại dữ liệu trang index
+                                        this.refreshData();
+                                    } else {
+                                        noti.warning(data.mesg)
+                                    }
+                                }
+                            );
+                        },
+                    )
+                },
+                // làm mới dữ liệu
+                refreshData() {
+                    noti.asyncBlock(
+                        // gọi ajax
+                        axios.get("/Admin/Category/GetAll")
+                        ,
+                        // thành công
+                        (response) => {
+                            console.log(response.data);
+                            this.categories = response.data; // gán dữ liệu nhận dc vào data
+                        }
+                        ,
+                        // thất bại
+                        (err) => {
+                            console.log(err);
+                            noti.alert("Tải dữ liệu thất bại!")
+                        }
+                        ,
+                        // nội dung chờ
+                        "Chờ xíu"
+                    )
+                }
+            },
+            mounted() {
+                this.refreshData();
+            }
+        }).mount("#vueData")
+
+    </script>
+}
