--- a/eShop/Areas/Admin/Views/Category/Update.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Update.cshtml
@@ -10,22 +10,16 @@
     <div class="col-md-4 m-auto">
         <form asp-action="Update">
             <div asp-validation-summary="All" class="text-danger"></div>
-
             <input asp-for="Id" type="hidden" class="form-control" />
-
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="form-label"></label>
                 <input asp-for="Name" class="form-control" />
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Cập nhật" class="btn btn-primary" />
             </div>
         </form>
-    </div>
-</div>
-
-<div class="mt-2">
-    <a asp-action="Index">Back to List</a>
+    </div>x
 </div>
 
 @section Scripts {
