--- a/eShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/eShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - eShop</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
+    <link href="~/lib/awesome-notifications/style.min.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="~/css/admin/site.css" asp-append-version="true" />
 
@@ -42,17 +44,18 @@
     </div>
 
     @*<footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - eShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>*@
+              <div class="container">
+                  &copy; 2022 - eShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+              </div>
+        </footer>*@
 
     <script src="~/lib/vue/vue.global.min.js"></script>
+    <script src="~/lib/awesome-notifications/index.var.min.js"></script>
     <script src="~/lib/axios/axios.min.js"></script>
-    <script src="~/lib/sweetalert/sweetalert.min.js"></script>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/admin/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
