--- a/eShop/Areas/Admin/Views/Category/Update.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Update.cshtml
@@ -19,7 +19,7 @@
                 <input type="submit" value="Cập nhật" class="btn btn-primary" />
             </div>
         </form>
-    </div>x
+    </div>
 </div>
 
 @section Scripts {
