--- a/eShop/Areas/Admin/Views/Category/_Create.cshtml
+++ b/eShop/Areas/Admin/Views/Category/_Create.cshtml
@@ -10,7 +10,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Thêm danh mục</h5>
+                <h5 class="modal-title" id="exampleModalLabel">{{action}} danh mục</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -18,14 +18,14 @@
                     <div class="col-lg-12">
                         <div class="form-group">
                             <label class="form-label">Tên danh mục</label>
-                            <input class="form-control" type="text" v-on:keyup="handleGetName"/>
+                            <input class="form-control" type="text" v-model="cateData.name"/>
                             <p>
                                 {{cateData.name}}
                             </p>
                         </div>
 
                         <div class="form-group mt-2 text-end">
-                            <input type="submit" value="Thêm mới" class="btn btn-primary" />
+                            <button type="submit" v-on:click="addOrUpdate()" class="btn btn-primary">{{action}}</button>
                         </div>
                     </div>
                 </div>
