--- a/eShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/eShop/Areas/Admin/Views/Category/Index.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Product Category";
 }
-<h1 class="text-center">Danh mục sản phẩm</h1>
+<h4 class="text-center">Danh mục sản phẩm</h4>
 
 
 @if (TempData["Err"] != null)
@@ -59,10 +59,17 @@
     <partial name="_Create" />
 </div>
 
-
 @section Scripts{
     <script>
-        let noti = new AWN(); // awesome-notifications
+
+        let options = {
+            minDurations: {
+                "async-block": 300,
+                "async": 300
+            },
+        }
+
+        let noti = new AWN(options); // awesome-notifications
 
         let modalCreate = new bootstrap.Modal("#modalCreate");
 
@@ -82,8 +89,7 @@
                 // hiển thị popup tạo danh mục
                 showCreateModel() {
                     // gán lại dữ liệu
-                    this.cateData.id = 0;
-                    this.cateData.name = null;
+                    this.clearData();
                     this.action = 'Thêm mới';
                     this.mCreate.show();
                 },
@@ -108,11 +114,22 @@
                                 noti.success(this.action + " danh mục thành công!");
                                 // tắt popup modal
                                 this.mCreate.hide();
-
                                 // load lại dữ liệu trang index
                                 this.refreshData();
                             } else {
-                                noti.warning(data.mesg)
+                                noti.warning(res.data.mesg)
+                            }
+                        },
+                        (err) => {
+                            let statusCode = err.response.status;
+                            if (statusCode = 400) {
+                                var errRes = err.response.data;
+                                for (let prop in errRes) {
+                                    for (let mesg of errRes[prop]) {
+                                        noti.alert(mesg);
+                                        return;
+                                    }
+                                }
                             }
                         }
                     );
@@ -128,9 +145,16 @@
                             this.cateData = { ...data }; // copy data
                             this.mCreate.show();
                             this.action = 'Cập nhật';
-                            console.log(data);
-                        }
+                        },
+                        //undefined,
+                        //{
+                        //    minDurations: {async: 0}
+                        //}
                     );
+                },
+                clearData() {
+                    this.cateData.id = 0;
+                    this.cateData.name = null;
                 },
                 // xóa danh mục
                 deleteCategory(id) {
@@ -164,7 +188,6 @@
                         ,
                         // thành công
                         (response) => {
-                            console.log(response.data);
                             this.categories = response.data; // gán dữ liệu nhận dc vào data
                         }
                         ,
